# ccpp-tricks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  boost-build-vc90-all.bat
edu/abseil/: CMakeLists.txt  summary.cpp
edu/books/: CMakeLists.txt  shild_gc_single_thread_test.cc
edu/books/coding_standarts/: ctors_dtors_assign.cc
edu/books/cppmove_book/: CMakeLists.txt  perfect_forwarding.cpp
edu/books/cpptemplates_book/: CMakeLists.txt  basics.cpp  ch28_debugging_templates.cpp
edu/books/eff_14/: Makefile  essentials.cc  summary.cpp
edu/books/from_gotchas/: ch1_test.cc  ch5_init.cc  ch7_poly_test.cc  ch8.cc
edu/books/gotchas/: ch1_test.cc  ch5_init.cc  ch7_poly_test.cc  ch8.cc
edu/books/opt_cpp/: CMakeLists.txt  ch4_benchmark.cc
edu/books/sean_parent/: goal_no_raw_loops_app.cc
edu/books/sutter_tasks/: exception_safety_test.cc  mem_and_resources_6_test.cc  stl_test.cc
edu/books/sutter_tasks_new/: classes_inh_pol_test.cc  templ_stl_test.cc
edu/fastware/: CMakeLists.txt  ReadMe.md
edu/fastware/alan_talbot/: eff.cpp
edu/fastware/ben_deane/: rvo_test.cpp
edu/fastware/yuri_minaev/: hypercritical_code_review_test.cpp
edu/train/: CMakeLists.txt  ccup_amazon_test.cc  ccup_apple_test.cc  ccup_facebook_test.cc  ccup_google_test.cc  ccup_nvidia_test.cc  crack_code2_test.cc  crack_code_gr_trees_test.cc  crack_code_lists.cc  my_recyclable_list_test.cc  oj_bst_test.cc  oj_spec_test.cc  oj_test.cc  sutter_stack_test.cc  zigzag.hpp
high_performance/lru/: CMakeLists.txt  lru.sh
projects/analysers_templs/asan_check_templ/: CMakeLists.txt  banch_of_test.cc  bug_container_resize_test.cc  summary_test.cc  working_asan_test.cc
projects/analysers_templs/tsan_check_templ/: CMakeLists.txt  bug_boost_ref_races_test.cc  nondetect_races_with_main_thread_test.cc  rw_semaphore.h  rw_semaphore_test.cc
projects/cc_core_and_stl_11/: CMakeLists.txt
projects/cpp_lang/: CMakeLists.txt  a_mod_test.cc  a_nomod_test.cc  a_sorted_cont_test.cc  actors_cc11.h  actors_cc98.h  app_main.cc  app_types.h  cc11_base_features_test.cc  cc_except_boundaries_test.cc  concepts.h  concurent_queues_pthread.h  containers_test.cc  core_tests.cc  crt_pattern_test.cc  emplace_test.cpp  equal_compare_test.cc  error_handling.h  fun_pred_adapter_test.cc  heap_struct_test.cc  high_level_opt_app.cc  insert_remove_erase_test.cc  isolation.h  iters_test.cc  marked_guidelines_test.cc  named_lookup_templates_overload_test.cc  pimpl_and_nvi_idiom_test.cc  safe_queue_cc11.h  std_own_ext_test.cc  stl_x64_test.cc  streams_test.cc  string_test.cc  subtle_moments_test.cc
projects/cpp_lang/benchmarks/: containers_benchmark.cc
projects/gc_alloc_resources/: CMakeLists.txt  launcher_tests.cc  mem_and_resources_test.cc  own_alloc_test.cc  ref_count_chromium_test.cc  shild_gc_single_thread_test.cc  smart_ptrs_in_depth_test.cc
projects/high_perf/: .cproject  .project  CMakeLists.txt  README.md  ReadMe.md  actors_cc11.h  actors_cc98.h  arch.h  copy_removal_tricks_test.cpp  data_structures.h  lru_benchmark.cc  test_folly_concurency.cc  threading.h  zigzag.hpp  zigzag_benchmark.cpp  zigzag_test.cpp
projects/high_perf/asio/: async_tcp_echo_server.cc
projects/high_perf/doc/: notes.txt  notes_0.txt  reactive_stuff.txt  thinks.txt  trouble0_asio_engine_long_running.txt  trouble0_emb_system.txt  trouble14_compose_data_srcs.txt  trouble3_rs.txt  trouble4_granularity.txt  trouble6_asio.txt  trouble7_asio_as_event_engine.txt
projects/high_perf/executors/: actors_cc98.h  test_actors.cc  test_asio_as_engine.cc  test_high_level_prim.cc
projects/high_perf/mem_in_deep/: mem_pools_test.cc  own_alloc_test.cc  smart_ptrs_in_depth_test.cc
projects/high_perf/mem_in_deep/backtrace_and_heap/: main.cc
projects/high_perf/parallel_data_structures/: concurent_queues.h
projects/high_perf/shadow/: actors_cc11.h  safe_queue_cc11.h
projects/high_perf/simd_neon/: neon.s
projects/high_perf/tbb_only/: CMakeLists.txt  goal_no_raw_sync_primitives_test.cc  struct_conc_test.cc
projects/high_perf/threading/: test_threading.cc  threading.cc  threading.h
projects/new_cpp/: CMakeLists.txt  core_tests.cc  summary.cc
projects/performance_matters/: CMakeLists.txt  buffer.cpp  drdobbs_test.cc  llvm_small_objects_test.cpp  lru.cc  mybenchmark.cc  small_data_structs_test.cc  ub_aligment_fix_test.cpp
projects/rt_audio/: CMakeLists.txt  ReadMe.md  iceoyx_hoofs_test.cpp
projects/tricks/: CMakeLists.txt
projects/tricks/alex_krupnik/matrix/: Makefile
projects/tricks/alex_krupnik/watch/: Top.h
projects/tricks/book_templ/: h1_test.cc
projects/tricks/coding_standarts/: ctors_dtors_assign.cc
projects/tricks/sean_parent/: goal_no_raw_loops_app.cc  inh_evil_reduce_c98_apps.cc
projects/tricks/stephan_t_lavavej/: hw_l2.cc
projects/tricks/sutter_tasks/: mem_and_resources_6_test.cc
projects/tricks/sutter_tasks_new/: classes_inh_pol_test.cc  templ_stl_test.cc
projects/tricks/tests/alex_krupnik/matrix/: matrixFirst.cpp
projects/tricks/tests/sutter_tasks_new/: templ_stl_test.cc
projects/try_x64_migrate/: CMakeLists.txt  cc_g_abstr.h  cc_io.h  cc_text_proc.h  config.h  kernels.cc  kernels.h  view.h
projects/try_x64_migrate/platform_specific/: c_platform_spec_types.h  internationalization.h  network_main_header.h  os_access.cc  scopes.cc  scopes.h  serial_abstr.h
projects/try_x64_migrate/source/heart/: c_app_constants.h  cc_app_constants.h  cc_g_abstr.cc  cc_g_abstr.h
projects/try_x64_migrate/source/inner_reuse/: c_text_proc.c  c_text_proc.h  cc_io.cc  cc_text_proc.cc  std_own_ext.h
projects/try_x64_migrate/source/platform_specific/: internationalization.cc  os_access.h  other_settings.cc  other_settings.h  zip_operations.cc  zip_operations.h
projects/x64-learn/: CMakeLists.txt
projects/x64-learn/tests/: viva64_test.cc
projects/x64_learn/: CMakeLists.txt  viva64_test.cc
projects/xsan-pack/tsan_check_templ/: CMakeLists.txt
projects/xsan-pack/tsan_check_templ/source/bug_report/: env.txt
tools/cmake_clang/: CMakeLists.txt  note.txt
tools/learn_cmake/: CMakeLists.txt
tools/learn_cmake/clang/: CMakeLists.txt
(+1297 files in other folders)
